<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:background="@color/primaryColor"
        tools:context=".ui.main.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/titleGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/titleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_margin="@dimen/_10sdp"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/all_items_scanned"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/_20ssp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/expiredCV"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:padding="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardElevation="@dimen/_10sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/see_expired_items"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_10ssp" />

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerEffectRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                        <include layout="@layout/shimmer_effect_item_list" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itemsScanedRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_list" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scanNowBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/app_name"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />
        <!-- Empty view for the list -->
        <LinearLayout
            android:id="@+id/main_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/barcode_scanner" />

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingTop="8dp"
                android:text="@string/there_is_no_product_scanned_yet"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/empty_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:paddingTop="8dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/please_click_plus_button_to_start_scanning"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>