<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="scan_now">Scan Now</string>
    <string name="item_name">Item Name</string>
    <string name="item_category">Item Category</string>
    <string name="all_items_scanned">Active Items</string>
    <string name="expires_items_scanned">Expired Items</string>
    <string name="see_expired_items">expired items</string>
    <string name="please_click_plus_button_to_start_scanning">please click plus button to start scanning</string>
    <string name="there_is_no_product_scanned_yet">There is no product scanned yet</string>
</resources>